# tetris

./: README.md
original/: Taskfile.yaml
original/Texturepacks/Cubes/: TextureInfo.txt
original/Texturepacks/Default/: TextureInfo.txt
original/Texturepacks/Many houses/: TextureInfo.txt
original/martomate/: Button.java  Credits.java  GameObject.java  GhostPiece.java  Input.java  Martomate.java  Options.java  Piece.java  Shape.java  SideBar.java  Tetris.java  Texture.java
remake/: Cargo.toml  Taskfile.yaml  index.html
remake/src/: app.rs  canvas.rs  game.rs  lib.rs  main.rs  renderer.rs  shader.wgsl  texture.rs  tile.rs  time.rs
remake/web/: index.html
